fixing bullet point alignment

--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,9 @@ p{
     margin-right: 150px;
     margin-left: 150px;
 }
-
+ul{
+    text-align: center;
+}
 h1, h2, h3 {
     color: rgb(39, 11, 86);
 }
